src/test/run-pass/struct-literal-dtor.rs
struct foo {
    x: ~str,
    drop { error!("%s", self.x); }
}

fn main() {
    let _z = foo { x: ~"Hello" };
}
